--- a/Pmercurium/app_mercurium/templates/create.html
+++ b/Pmercurium/app_mercurium/templates/create.html
@@ -20,12 +20,11 @@
             <div class="title">Mercurium</div>
             <div class="sub-title">v 1.0</div>
         </a>
-        <!-- <br>
+        <br>
         <a href="/categories/{{wallet.id}}">Categorias</a>
-        <a href="#">Gráfico</a>
         <a href="#">Relatório</a>
         <br>
-        <a href="/trash.html">Lixeira</a> -->
+        <a href="/trash/{{wallet.id}}">Lixeira</a>
     </div>
     <div class="content-container">
         <a href="/wallet_transactions/{{wallet.id}}">AQUI PARA VOLTAR</a>
