--- a/Pmercurium/app_mercurium/static/css/style.css
+++ b/Pmercurium/app_mercurium/static/css/style.css
@@ -390,6 +390,11 @@ button.modal-form:hover {
     width: 22%;
 }
 
+hr {
+	border: 0;
+	border-top: 1px solid #094CFA;
+}
+
 #gain, #expense {
     display: none;
 }
