--- a/Pmercurium/app_mercurium/templates/create.html
+++ b/Pmercurium/app_mercurium/templates/create.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <a class="logo" href="/"><img width="75" src="{% static 'img/svg/Logo_Mercurium.svg' %}">
+        <a class="logo" href="/wallet_transactions/{{wallet.id}}"><img width="75" src="{% static 'img/svg/Logo_Mercurium.svg' %}">
             <div class="title">Mercurium</div>
             <div class="sub-title">v 1.0</div>
         </a>
@@ -26,7 +26,6 @@
         <a href="/trash/{{wallet.id}}">Lixeira</a>
     </div>
     <div class="content-container">
-        <a href="/wallet_transactions/{{wallet.id}}">AQUI PARA VOLTAR</a>
         <div class="form-item">
             <form action="" method="POST">
                 <h2>Adicionar Registro</h2>
