--- a/Pmercurium/app_mercurium/templates/update.html
+++ b/Pmercurium/app_mercurium/templates/update.html
@@ -25,7 +25,7 @@
         <br>
         <a href="/trash/{{wallet.id}}">Lixeira</a>
         <br>
-            <a href="/accounts/logout">Sair</a>
+            <a style="margin-top: 40rem" class="active" class="logout" href="/accounts/logout">Sair</a>
         <br>
     </div>
     <div class="content-container">
