--- a/Pmercurium/app_mercurium/static/css/style.css
+++ b/Pmercurium/app_mercurium/static/css/style.css
@@ -299,6 +299,23 @@ button.modal-form {
     box-shadow: 3px 3px 9px var(--sw-color);
 }
 
+.btn-return {
+    margin-top: 10px;
+    margin-right: 5px;
+    height: 3rem;
+    width: 5rem;
+    font-size: 1rem;
+    padding: 0.3rem 1rem;
+    border-radius: 10px;
+    background-color: var(--bm-color);
+    color: white;
+    border: none;
+    cursor: pointer;
+    line-height: 30px;
+    border: 3px solid var(--bm-color);
+    box-shadow: 3px 3px 9px var(--sw-color);
+}
+
 button.modal-form img {
     margin-right: 5px;
     float: left;
